cabal-version:      2.4
name:               two-putt
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ryanchamp-ICE
maintainer:         ryan.champ@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Game.Env
        Game.State
        Game.Type
        Game.Render
        Game

    build-depends:    base ^>=4.14.3.0 || >= 4.15.0.0 || >= 4.12.0.0,
                      transformers
    hs-source-dirs:   lib

executable two-putt
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0 || >= 4.15.0.0 || >= 4.12.0.0,
                      transformers,
                      two-putt
    hs-source-dirs:   app
    default-language: Haskell2010
